--- a/style.css
+++ b/style.css
@@ -304,7 +304,9 @@ button:hover {
       font-size: 25px;
       position: relative;
       bottom: -13px;
-      left: -10px;
+      left: -3px;
+      width: ;
+    
     }
    .form-box h1{
     top: -10px;
@@ -323,5 +325,16 @@ button:hover {
     font-size: 15px;
     position: relative;
     top: -20px;
+   }
+   .ko p{
+    color: rgb(228, 61, 61);
+    font-size: 15px;
+    position: relative;
+    bottom: -5px;
+   }
+   .ko{
+    width: 100%;
+    height: 40px;
+    background-color: rgb(247, 237, 237);;
    }
 }
