--- a/style.css
+++ b/style.css
@@ -235,15 +235,17 @@ img {
     }
     .anshul{
       position:relative;
-      right: -60px;
+      right: -50px;
       border-radius: 10px;
+      position: relative;
+      bottom: -50px;
     
     }
     .kk{
       color: rgb(255, 255, 255);
       font-weight: 700;
-      right: -110px;
-      top: -310px;
+      right: -75px;
+      top: -260px;
       font-size: 28px;
       position: relative;
     }
@@ -268,7 +270,7 @@ img {
   width: 300px;
   margin: 50px auto;
   position: relative;
-  bottom: -130px;
+  bottom: -50px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
 }
@@ -293,7 +295,7 @@ button {
   cursor: pointer;
   position: relative;
   top: -25px;
-  left: -5px;
+  left: -0px;
 }
 
 button:hover {
@@ -327,14 +329,27 @@ button:hover {
     top: -20px;
    }
    .ko p{
-    color: rgb(228, 61, 61);
+    color: rgb(255, 255, 255);
     font-size: 15px;
     position: relative;
-    bottom: -5px;
+    top: -10px;
+    right: -10px;
    }
    .ko{
-    width: 100%;
-    height: 40px;
-    background-color: rgb(247, 237, 237);;
+    width: 350px;
+    height: 45px;
+    background-color: rgb(255, 53, 53);
+    position: relative;
+    right: -10px;
+    border-radius: 8px;
    }
+  .mpp p{
+color: rgb(238, 255, 238);
+font-size: 12px;
+position: relative;
+right: -20px;
+  }
+  .mpp h1{
+    color: white;
+  }
 }
