--- a/style.css
+++ b/style.css
@@ -333,7 +333,8 @@ button:hover {
     font-size: 15px;
     position: relative;
     top: -10px;
-    right: -10px;
+    right: -7px;
+    padding-bottom: -10px;
    }
    .ko{
     width: 350px;
